--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,13 @@ Flask = "^2.2.2"
 pydantic = "^1.10.4"
 python-dotenv = "^0.21.1"
 functions-framework = "^3.3.0"
-
+ruamel-yaml = "^0.17.32"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 syrupy = "^4.5.0"
-ruamel-yaml = "^0.17.32"
 flake8-pyproject = "^1.2.3"
+invoke = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
