--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "azure-devops-slack"
-version = "0.0.1"
+version = "0.0.2"
 description = "Slack notifications from Azure DevOps pull requests"
 authors = ["Denis <denis@fbjorn.cc>"]
 license = "BSD-3-Clause"
@@ -20,6 +20,7 @@ pytest = "^7.2.1"
 syrupy = "^4.5.0"
 flake8-pyproject = "^1.2.3"
 invoke = "^2.2.0"
+gunicorn = "20.1.0"
 
 [build-system]
 requires = ["poetry-core"]
